--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_maps">Map</string>
     <string name="edit_message">Enter Message</string>
-    <string name="button_send">Login</string>
+    <string name="button_login">Login</string>
+    <string name="button_register">Register</string>
     <string name="name_hint">Username</string>
     <string name="pass_hint">Password</string>
 </resources>
